// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeTuner component should invoke onChange callback when first input was changed 1`] = `
<div>
  <div>
    <div
      class="TabsBar"
      role="tablist"
    >
      <div
        aria-disabled="false"
        aria-selected="true"
        class="TabItem TabItem--isActive"
        role="tab"
        tabindex="0"
      >
        Colors
      </div>
      <div
        aria-disabled="false"
        aria-selected="false"
        class="TabItem"
        role="tab"
        tabindex="0"
      >
        Sizing
      </div>
    </div>
    <ul
      class="List"
      role="listbox"
      tabindex="0"
    >
      <li
        class="ListItem List__item ThemeTuner__item"
      >
        <p
          class="ThemeTuner__label"
        >
          Background color
        </p>
        <span>
          <div>
            <div
              class="Input__inputContainer Input__inputContainer--size_small"
              data-testid="inputContainer"
            >
              <input
                class="Input__input Input__input--size_small"
                data-lpignore="true"
                id=":r4:"
                type="color"
                value="#ffffff"
              />
            </div>
          </div>
          <span
            class="Text--context_neutral ColorValue__value"
          >
            #ffffff
          </span>
        </span>
      </li>
      <li
        class="ListItem List__item ThemeTuner__item"
      >
        <p
          class="ThemeTuner__label"
        >
          Foreground color
        </p>
        <span>
          <div>
            <div
              class="Input__inputContainer Input__inputContainer--size_small"
              data-testid="inputContainer"
            >
              <input
                class="Input__input Input__input--size_small"
                data-lpignore="true"
                id=":r5:"
                type="color"
                value="#000000"
              />
            </div>
          </div>
          <span
            class="Text--context_neutral ColorValue__value"
          >
            #000000
          </span>
        </span>
      </li>
      <li
        class="ListItem List__item ThemeTuner__item"
      >
        <p
          class="ThemeTuner__label"
        >
          Border radius
        </p>
        <span>
          <div>
            <div
              class="Input__inputContainer Input__inputContainer--size_small"
              data-testid="inputContainer"
            >
              <input
                class="Input__input Input__input--size_small"
                data-lpignore="true"
                id=":r6:"
                type="number"
                value="3"
              />
            </div>
          </div>
          <span
            class="Text--context_neutral UnitValue__value"
          >
            3
            px
          </span>
        </span>
      </li>
      <li
        class="ListItem List__item ThemeTuner__item"
      >
        <p
          class="ThemeTuner__label"
        >
          Link decoration
        </p>
        <div>
          <div
            class="Input__inputContainer Input__inputContainer--size_small"
            data-testid="inputContainer"
          >
            <input
              class="Input__input Input__input--size_small"
              data-lpignore="true"
              id=":r7:"
              type="text"
              value="none"
            />
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ThemeTuner component should render component correctly 1`] = `
<div>
  <div>
    <div
      class="TabsBar"
      role="tablist"
    >
      <div
        aria-disabled="false"
        aria-selected="true"
        class="TabItem TabItem--isActive"
        role="tab"
        tabindex="0"
      >
        Colors
      </div>
      <div
        aria-disabled="false"
        aria-selected="false"
        class="TabItem"
        role="tab"
        tabindex="0"
      >
        Sizing
      </div>
    </div>
    <ul
      class="List"
      role="listbox"
      tabindex="0"
    >
      <li
        class="ListItem List__item ThemeTuner__item"
      >
        <p
          class="ThemeTuner__label"
        >
          Background color
        </p>
        <span>
          <div>
            <div
              class="Input__inputContainer Input__inputContainer--size_small"
              data-testid="inputContainer"
            >
              <input
                class="Input__input Input__input--size_small"
                data-lpignore="true"
                id=":r0:"
                type="color"
                value="#ffffff"
              />
            </div>
          </div>
          <span
            class="Text--context_neutral ColorValue__value"
          >
            #ffffff
          </span>
        </span>
      </li>
      <li
        class="ListItem List__item ThemeTuner__item"
      >
        <p
          class="ThemeTuner__label"
        >
          Foreground color
        </p>
        <span>
          <div>
            <div
              class="Input__inputContainer Input__inputContainer--size_small"
              data-testid="inputContainer"
            >
              <input
                class="Input__input Input__input--size_small"
                data-lpignore="true"
                id=":r1:"
                type="color"
                value="#000000"
              />
            </div>
          </div>
          <span
            class="Text--context_neutral ColorValue__value"
          >
            #000000
          </span>
        </span>
      </li>
      <li
        class="ListItem List__item ThemeTuner__item"
      >
        <p
          class="ThemeTuner__label"
        >
          Border radius
        </p>
        <span>
          <div>
            <div
              class="Input__inputContainer Input__inputContainer--size_small"
              data-testid="inputContainer"
            >
              <input
                class="Input__input Input__input--size_small"
                data-lpignore="true"
                id=":r2:"
                type="number"
                value="3"
              />
            </div>
          </div>
          <span
            class="Text--context_neutral UnitValue__value"
          >
            3
            px
          </span>
        </span>
      </li>
      <li
        class="ListItem List__item ThemeTuner__item"
      >
        <p
          class="ThemeTuner__label"
        >
          Link decoration
        </p>
        <div>
          <div
            class="Input__inputContainer Input__inputContainer--size_small"
            data-testid="inputContainer"
          >
            <input
              class="Input__input Input__input--size_small"
              data-lpignore="true"
              id=":r3:"
              type="text"
              value="none"
            />
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
